<resources>
    <string name="app_name">Book it my way</string>
    <string name="fontRegular">Roboto-Regular.ttf</string>
    <string name="fontMedium">Roboto-Medium.ttf</string>
    <string name="fontBold">Roboto-Bold.ttf</string>
    <string name="fontThin">Roboto-Thin.ttf</string>
    <string name="emptyerror">Please fill the field</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="Customer">CUSTOMER</string>
    <string name="Customer_name">Customer Name</string>
    <string name="Vendor">VENDOR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="resetpasswrd">Reset Password</string>
    <string name="login">Login</string>
    <string name="notification">Notification</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="service_you_provide">What Service are you \n Providing?</string>
    <string name="choose_preferred_lang">Choose a Preferred Language</string>
    <string name="verification">Verification</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="send">Send</string>
    <string name="new_user_sign_up">Need an account? <u><font color='#022E8D'>SignUp</font></u></string>
    <string name="alreay_have_an_account_login">Alreay have an account? <u><font color='#022E8D'>Login</font></u></string>
    <string name="next">Next</string>
    <string name="i_agree_to_the_terms_conditions">I agree with the <font fgcolor="#022E8D">terms &amp; conditions</font></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="vendormobile_number">Vendor Mobile Number</string>
    <string name="cust_mobile_number">Customer Mobile Number</string>
    <string name="ven_email">Vendor Email</string>
    <string name="cus_email">Customer Email</string>
    <string name="cus_name">Customer Name</string>
    <string name="cancelled">Cancelled</string>
    <string name="select_reason">Select Reason</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="select_vendor">Select Vendor</string>
    <string name="choose_from">Choose from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="reserve">Reserve</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="help_center">Help Center</string>
    <string name="navigation_header">Navigation header</string>
    <string name="restaurant_book">Restaurant Book</string>
    <string name="doctor_appointment">Doctor Appointment</string>
    <string name="purchase_items">Purchase Items</string>
    <string name="disease_reason">Disease/Reason</string>
    <string name="select_doctor_clinic">Select Doctor/Clinic</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="selectdate">Select Date</string>
    <string name="selecttime">Select Time</string>
    <string name="submit">Submit</string>
    <string name="no_of_seat">No of Seat</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="select_store">Select Store</string>
    <string name="select_product">Select Product</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="list_of_advertisement_company">List of Advertisement Company</string>
    <string name="reset">Reset</string>
    <string name="book_table">Book a Table</string>
    <string name="book_ride">Book a Ride</string>
    <string name="appoint">Appointments</string>
    <string name="book">Book</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="amount">Amount</string>
    <string name="number_of_people">Number of People</string>
    <string name="booking_confirmed_successfully">Booking Confirmed \n successfully</string>
    <string name="booking_confirmed_customer">Thank you! \n Your Order details</string>
    <string name="table_booking">Table Booking</string>
    <string name="confrim_booking">Confirm Booking</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="booking_information">Booking Information</string>
    <string name="succesful">Successful</string>
    <string name="parking_valet">Parking/Valet</string>
    <string name="book_limo">Book a Limo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="restaurant">Restaurant</string>
    <string name="pick_your_food">Pick your Food</string>
    <string name="pick_your_drinks">Pick your Drinks</string>
    <string name="pick_your_dessert">Pick your Dessert</string>
    <string name="total_amount">Total Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_at_table">Pay at Table</string>
    <string name="zip_code">Zip Code</string>
    <string name="postal_code">Postal Code</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="pay_at_station">Pay at Station</string>
    <string name="from">From</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="to">\u0020To\u0020 </string>
    <string name="too">To</string>
    <string name="special_ins">Special Instructions</string>
    <string name="pay_after_drop">Pay after Drop</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="purchase_history">Purchase History</string>
    <string name="bookings">Bookings</string>
    <string name="pay">Pay</string>
    <string name="taxi">Taxi</string>
    <string name="limos">Limos</string>
    <string name="tour_bus">Tour Bus</string>
    <string name="business_profile">Business Profile</string>
    <string name="sight_seeing">Sight Seeing</string>
    <string name="other">Other</string>
    <string name="store_subcat">Store SubCategory</string>
    <string name="store_items">Store Items</string>
    <string name="excursion">Excursion</string>
    <string name="tickes_fpr_events">Tickets &amp; Events</string>
    <string name="event">Event</string>
    <string name="dentist">Dentist</string>
    <string name="hair">Hair</string>
    <string name="nails">Nails</string>
    <string name="massage_or_physio">Massage or Physio</string>
    <string name="doctor_clinic">Doctor/Clinic</string>
    <string name="doctor">Doctor</string>
    <string name="please_wait">Please Wait...</string>
    <string name="status_success">0</string>
    <string name="status_failure">1</string>
    <string name="purchase">Purchase</string>
    <string name="head_office">Head Office</string>
    <string name="head_office_location">Head Office Location</string>
    <string name="your_offer">Your Offers(Max 50)</string>
    <string name="offers">Offers</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="create">Create</string>
    <string name="create_offer">Create Offer</string>
    <string name="barcode">Bar Code</string>
    <string name="add_advertisement">Add Advertisement</string>
    <string name="send_offer">Send Offer</string>
    <string name="choose_service_area">Choose your Service Area</string>
    <string name="check_tern">Accept Term &amp; Conditions.</string>
    <string name="choose_service_menu">Choose your Service Menu</string>
    <string name="business_name">Business Name</string>
    <string name="business_contact_number">Business Contact Number</string>
    <string name="business_email">Business Email</string>
    <string name="transportaion_vehicle">Transportaion/Vehicle</string>
    <string name="restaurant_dinning">Restaurant/Dinning</string>
    <string name="choose_sub_category">Choose Sub Category</string>
    <string name="setup_your_bussiness">Setup Your Business</string>
    <string name="bussiness_information">Business Information</string>
    <string name="service_information">Service Information</string>
    <string name="editbussiness_information">Edit Business Information</string>
    <string name="editservice_information">Edit Service Information</string>
    <string name="event_information">Event Information</string>
    <string name="review_your_bussiness">Review Your Business</string>
    <string name="numbers">Numbers</string>
    <string name="how_many_taxi_you_have">How many Taxi you have</string>
    <string name="avg_no_of_seat_per_taxi_for_user">Avg. no of seat per Taxi for user</string>
    <string name="rate_per_km">Rate Per Km</string>
    <string name="rate">Rate</string>
    <string name="rate_us">Rate Us</string>
    <string name="select_region">Select Region</string>
    <string name="region">Region</string>
    <string name="select_days_of_service">Selected Days of Service</string>
    <string name="bussines_hours">Busines Hours</string>
    <string name="choose_valid_time_slot">Choose Valid Time Slot</string>
    <string name="bussines_visithours">Visiting Hours</string>
    <string name="closing_time">Closing Time</string>
    <string name="start_time">Start Time</string>
    <string name="or">or</string>
    <string name="all_days">All Days</string>
    <string name="monday">M</string>
    <string name="saturday">S</string>
    <string name="friday">F</string>
    <string name="thursday">T</string>
    <string name="wednesday">W</string>
    <string name="tuesday">T</string>
    <string name="monday_m">Mon</string>
    <string name="saturday_s">Sat</string>
    <string name="friday_f">Fri</string>
    <string name="thursday_t">Thu</string>
    <string name="wednesday_w">Wed</string>
    <string name="tuesday_t">Tue</string>
    <string name="sunday_t">Sun</string>
    <string name="_24_hrs">24 Hrs</string>
    <string name="select_area">Select Area</string>
    <string name="select_city">Select City</string>
    <string name="rgs_sign_up_empty_email">Please enter an email address</string>
    <string name="rgs_sign_up_invalid_email">Invalid email address.</string>
    <string name="sign_up_invalid_password">Please use 6 or more characters, that include upper &amp; lower case letters, numbers and one special symbol(@#$%).</string>
    <string name="rgs_sign_up_invalid_username">Please use 6 or more characters.</string>
    <string name="rgs_sign_up_invalid_mobileno">Please use 6 or more digits.</string>
    <string name="rgs_terms_validations">Please accept terms &amp; conditions. </string>
    <string name="rgs_sign_up_title">Sign Up</string>
    <string name="rgs_password_not_match">Password Not Matching</string>
    <string name="rgs_username_hint">Choose a Username</string>
    <string name="add_more">Add More</string>
    <string name="add_few_items_to_your_food_menu_nyou_can_add_change_delete_items_later">Add few items to your food menu, \nYou can Add/Change/Delete items later</string>
    <string name="vendor_success_msg">Your Application is successfully submitted \nTo the Admin and is under review, soon the \nAdmin will contact you via given information,\nOnce your application is approved, We\'ll \nNotify you</string>
    <string name="go_to_home">Go To Home</string>
    <string name="unfollow">Unfollow</string>
</resources>