<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <com.virtual.customervendor.customview.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/sp_14"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        app:customFont="@string/fontBold"
        android:background="@color/themecolor_022E8D"/>

    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/tv_galleryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_14"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        app:customFont="@string/fontRegular"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/text2_color_7d7d7d"/>

    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/tv_cameraText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_14"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        app:customFont="@string/fontRegular"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/text2_color_7d7d7d"/>


    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/tv_cancelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_14"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        app:customFont="@string/fontRegular"/>
</LinearLayout>