<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />

    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/btn_restaurant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/edittext_bg"
        android:drawableRight="@drawable/right_black"
        android:gravity="center_vertical"
        android:hint="@string/select_restaurant"
        android:padding="@dimen/dp_6"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_16"
        app:customFont="@string/fontRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.virtual.customervendor.customview.CustomEditText
        android:id="@+id/ed_seat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/edittext_bg"
        android:hint="@string/no_of_seat"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_5"
        android:textColor="@color/text2_color_7d7d7d"
        android:textSize="@dimen/sp_16"
        app:customFont="@string/fontMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_restaurant" />


    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/txt_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:hint="@string/date"
        android:padding="@dimen/dp_6"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_16"
        app:customFont="@string/fontRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_seat" />

    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/txt_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:hint="@string/time"
        android:padding="@dimen/dp_6"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_16"
        app:customFont="@string/fontRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_date" />

    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_100"
        android:background="@drawable/btn_bg_click"
        android:gravity="center"
        android:padding="@dimen/dp_6"
        android:stateListAnimator="@animator/us_button_selector"
        android:text="@string/submit"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_16"
        app:customFont="@string/fontRegular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_time" />


</android.support.constraint.ConstraintLayout>