<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_loc"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_marginTop="@dimen/dp_50"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_check_circle" />


    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/txt_trans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/vendor_success_msg"
        android:textColor="@color/text1_color_101010"
        android:textSize="@dimen/sp_17"
        app:customFont="@string/fontRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_loc" />


    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/btn_bg_click"
        android:gravity="center"
        android:stateListAnimator="@animator/us_button_selector"
        android:text="@string/go_to_home"
        android:paddingRight="@dimen/dp_50"
        android:paddingLeft="@dimen/dp_50"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/sp_20"
        app:customFont="@string/fontBold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_trans" />

</android.support.constraint.ConstraintLayout>