<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cons_main"
    android:layout_marginTop="@dimen/dp_5"
    android:paddingBottom="@dimen/dp_20">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_upload"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/place_holder_banner"
        app:layout_constraintDimensionRatio="8:5" />


    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/ed_eventname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        android:textColor="@color/text1_color_101010"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:textSize="@dimen/sp_18"
        app:customFont="@string/fontRegular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_upload" />

    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/ed_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        android:textColor="@color/text1_color_101010"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_18"
        android:layout_marginRight="@dimen/dp_10"
        app:customFont="@string/fontRegular"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_upload" />

    <com.virtual.customervendor.customview.CustomTextView
        android:id="@+id/ed_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:layout_marginLeft="@dimen/dp_10"
        android:textColor="@color/text1_color_101010"
        android:layout_marginTop="@dimen/dp_5"
        android:textSize="@dimen/sp_14"
        app:customFont="@string/fontThin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_eventname" />


</android.support.constraint.ConstraintLayout>




